fixed css - layout issues

--- a/src/App.css
+++ b/src/App.css
@@ -301,16 +301,16 @@ label{
   margin-left: 25px;
 }
 
-.notes-inputbox{
+.notes-inputbox {
   position: absolute;
-  bottom:0%;
-  width: 70%;
   background-color: #001F8B;
   padding: 30px;
+  bottom: 0;
+  width: -webkit-fill-available;
 }
 
 .input-notes{
-  width: 99%;
+  width: 98%;
   height: 130px;
   border-radius: 9px;
   outline: none;
@@ -323,18 +323,19 @@ label{
 }
 
 .notesbox{
-   height: 350px;
-   padding-bottom: 24px;
+   height: 50vh;
+   padding-bottom: 84px;
    overflow: auto;
    display: block;
 }
 
 .notes{
-  width: 997px;
   box-shadow: 0px 4px 20px 0px rgba(0, 0, 0, 0.25);
   background-color: white;
   padding: 24px 40px;
   margin: auto;
+  margin-left: 50px;
+  margin-right: 50px;
   margin-top: 20px;
   text-align: left;
   font-size: 18px;
@@ -361,6 +362,7 @@ label{
 
 .home-section{
   width: 100%;
+  height: 100%;
   margin: auto;
   text-align: center;
   margin-top: 130px;
